cluster_components_template/base/servicemesh/istio/istio-virtualservices/opensearch-dashboard-vs.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: opensearch-dashboard-vs
  namespace: logging
spec:
  gateways:
  - istio-system/ext-gateway
  hosts:
  - "<<opensearch_host_name>>"
  http:
  - name: opensearch-dashboard
    match:
    - uri:
        prefix: /dashboard
    route:
    - destination:
        port:
          number: 5601
        host: opensearch-dashboard-opensearch-dashboards.logging.svc.cluster.local
